# ticket-search-workflow

./: .env.example  .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  main.py  pyproject.toml
database_generator/: database_factory.py
tests/model_factory/: __init__.py  conftest.py
tests/model_factory/booking/: booking.py
tests/model_factory/fligth/: __init__.py  airline.py  fligth.py
ticket-search-workflow/: .gitignore  .importlinter  .pre-commit-config.yaml  DockerFile  mypy.ini  pyproject.toml
workflow/: __init__.py  __main__.py
workflow/api/: __init__.py
workflow/api/bookings/: __init__.py  booking.py  bookings.py
workflow/api/flights/: __init__.py  airlines.py  flight.py  flights.py
workflow/core/: __init__.py
workflow/core/base/: __init__.py  config.py  model.py  repository.py  schema.py  service.py
workflow/core/config/: __init__.py  fastapi_server.py  postgres.py
workflow/core/const/: booking.py  flight.py
workflow/core/database/: __init__.py  postgres.py
workflow/core/init/: __init__.py
workflow/core/init/database/: __init__.py  init_database.py  postgres.py
workflow/core/init/fastapi/: __init__.py  init_fastapi.py
workflow/core/type/: model.py
workflow/model/: __init__.py
workflow/model/booking/: __init__.py  booking.py
workflow/model/flight/: __init__.py  airline.py  flight.py
