[tool.poetry]
name = "ticket-search-workflow"
version = "0.1.0"
description = ""
authors = ["Illia Bahlai <bahlai.illia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.3"}
fastapi-restful = {extras = ["all"], version = "^0.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
